--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,3 +19,8 @@ phases:
   post_build:
     commands:
       - echo Entered the post_build phase...
+
+artifacts:
+  files:
+    - build/libs/codebuild-trial-1.0.jar
+  discard-paths: yes
