gradleのライブラリをキャッシュし、再度ダウンロードが発生しないように修正
Signed-off-by: Tomomi Kajita <t-kajita@biglobe.co.jp>

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,5 +22,9 @@ phases:
 
 artifacts:
   files:
-    - build/libs/codebuild-trial-1.0.jar
+    - build/libs/base-project-1.0.war
   discard-paths: yes
+
+cache:
+  paths:
+    - '/root/.gradle/**/*'
