ユニットテストを実行し、実行結果をS3に残すように修正
Signed-off-by: Tomomi Kajita <t-kajita@biglobe.co.jp>

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - ./gradlew build -x test
+      - ./gradlew migrateH2 build
       - echo Build completed on `date`
 
   post_build:
@@ -27,8 +27,10 @@ phases:
 
 artifacts:
   files:
-    - build/libs/codebuild-trial-1.0.war
-  discard-paths: yes
+    - build/libs/codebuild-trial-1.0.jar
+    - build/test-results/**/*
+    - build/reports/**/*
+  discard-paths: no
 
 cache:
   paths:
