--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -2,7 +2,6 @@ spring:
   application:
     name: codebuild-trial
   datasource:
-    driver-class-name: org.h2.Driver
-    url: "jdbc:h2:./build/test"
-    username: sa
-    password: ""
+    url: "jdbc:mysql://localhost:3306/trial"
+    username: trial
+    password: passw0rd
