--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,6 +22,10 @@ phases:
 
 artifacts:
   files:
-    - build/libs/base-project-1.0.war
+    - build/libs/codebuild-trial-1.0.war
     - build/reports/**/*
   discard-paths: no
+
+cache:
+  paths:
+    - '/root/.gradle/**/*'
